2000-08-10  Sam Steingold  <sds@gnu.org>

	* lisp/bbdb.el (bbdb-join): dropped an unused variable
	(save-current-buffer): fset to `save-excursion' if not present
	(with-current-buffer): defmacro if not present
	(bbdb-save-buffer-excursion): dumped
	(bbdb-with-db-buffer, bbdb-records, bbdb-write-file-hook-fn): use
	`with-current-buffer' instead of `bbdb-save-buffer-excursion'
	(bbdb-initialize): `load', not `require' "bbdb-autoloads"
	(bbdb-modified-p): dumped
	(bbdb-read-string): removed minibuffer-resizing code: all
	supported emaxen can resize minibuffers themselves

	Remote DB synchronization:
	(bbdb-file-remote, bbdb-file-remote-save-always): new user variables
	(bbdb-buffer): a function now; copy `bbdb-file-remote' to
	`bbdb-file' when it is newer
	(bbdb-write-file-hook-fn): maybe write `bbdb-file-remote'

2000-08-10  Robert Fenk  <fenk@forwiss.de>

	* lisp/bbdb.el (bbdb-quiet-about-name-mismatches): if a number it
	will be the number of seconds to sit-for when displaying the
	notification about a name mismatch.
	(bbdb-join): inverse function of bbdb-split.
	(bbdb-annotate-message-sender): tries to guess a reasonable
	default name when creating new records.

	* lisp/bbdb-com.el (bbdb-define-all-aliases): Records without a
	net nolonger cause a error, one will get just a waring when not
	running in silent mode.
	(bbdb-delete-current-field-or-record): added
	handling of "*" in order to delete multiple records and 'noprompt'.
	(bbdb-send-mail-internal): added missing call of vm hooks.
	(bbdb-add-or-remove-mail-alias): returns all mail aliases in a format
	suitable for completing read.
	(bbdb-add-or-remove-mail-alias): convenience function for adding
	or removing mail aliases from one or multiple records.  This makes
	it much simpler to define groups.

	* lisp/bbdb-snarf.el (bbdb-snarf-nice-real-name-regexp): regexp
	matching unwanted characters used by
	(bbdb-snarf-nice-real-name): removes unwanted characters from real
	names/email addresses.